--- a/cwebviewer/config/config.json
+++ b/cwebviewer/config/config.json
@@ -7,7 +7,10 @@
     "WEBP": true,
     "WEBP_QUALITY": 5,
     "WEBP_PRESET": "default",
-    "DISABLE_WEBP": false,
+    "REDIS": "true",
+    "REDIS_HOST": "localhost",
+    "REDIS_PORT": 6379,
+    "REDIS_EXPIRE_TIME": 3600,
     "IMG_PER_PAGE": 20,
     "ARCHIVE_PER_PAGE": 20,
     "DIRECTORIES":[
