some refactor on fhash2page and archive filename encoding setting
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/config/config.json
+++ b/cwebviewer/config/config.json
@@ -13,6 +13,7 @@
     "REDIS_EXPIRE_TIME": 3600,
     "IMG_PER_PAGE": 20,
     "ARCHIVE_PER_PAGE": 20,
+    "ARCHIVE_FILENAME_ENCODING": "GBK",
     "DIRECTORIES":[
         "."
     ]
