add use_tls and use_webauth etc to config.json
Signed-off-by: hrimfaxi <outmatch@gmail.com>

--- a/cwebviewer/config/config.json
+++ b/cwebviewer/config/config.json
@@ -3,6 +3,10 @@
     "ADDRESS": "127.0.0.1",
     "PORT": 5001,
     "SORT": "name",
+    "USE_TLS" : true,
+    "USE_WEBAUTH": true,
+    "WEBAUTH_USERNAME": "tutu",
+    "WEBAUTH_PASSWORD": "kuso",
     "REVERSE": false,
     "WEBP": true,
     "WEBP_QUALITY": 5,
